--- a/11.3/11.3/11.3.vcxproj.filters
+++ b/11.3/11.3/11.3.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
